# alphalens

alphalens/: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  architecture.md  design-doc.md
alphalens/backend/: check_jobs.py  deploy_all_lambdas.py  pyproject.toml  test_full.py  test_simple.py
alphalens/backend/analyst/: agent.py  lambda_handler.py  package_docker.py  pyproject.toml  templates.py  test_full.py  test_simple.py
alphalens/backend/api/: auth.py  discovery_stream.py  lambda_handler.py  main.py  package_docker.py  pipeline_stream.py  pyproject.toml  qa_stream.py  rank_stream.py  run.sh
alphalens/backend/database/: README.md  pyproject.toml  reset_db.py  run_migrations.py  test_data_api.py  test_db.py  test_discovery_persist.py  verify_database.py
alphalens/backend/database/migrations/: 001_schema.sql  002_deep_research.sql  003_deep_research_async.sql
alphalens/backend/database/src/: __init__.py  client.py  demo_data.py  discovery_persist.py  models.py  schemas.py
alphalens/backend/deep_research_trigger/: lambda_handler.py  package.py  pyproject.toml
alphalens/backend/discovery/: Dockerfile  agent.py  deep_research.py  deep_research_phase2.py  deploy.py  lambda_handler.py  ndjson_stream.py  package_docker.py  pyproject.toml  server.py  templates.py  test_full.py  test_service.py  test_simple.py
alphalens/backend/metrics/: pyproject.toml
alphalens/backend/metrics/alphalens_metrics/: __init__.py  action_plan_service.py  market_metric_engine.py  market_regime_service.py  news_guardrail_service.py  opportunity_ranking_service.py  portfolio_risk_engine.py  test_action_plan_service.py
alphalens/backend/orchestrator/: agent.py  job_stages.py  lambda_handler.py  package_docker.py  pipeline_job.py  pyproject.toml  templates.py  test_full.py  test_pipeline.py  test_simple.py
alphalens/backend/portfolio/: agent.py  lambda_handler.py  package_docker.py  pyproject.toml  templates.py  test_full.py  test_simple.py
alphalens/backend/qa/: agent.py  lambda_handler.py  package_docker.py  pyproject.toml  run.sh  server.py  sse_stream.py  templates.py  test_full.py  test_simple.py
alphalens/backend/scripts/: package_agent_docker.py
alphalens/backend/shared/: pyproject.toml
alphalens/backend/shared/alphalens_shared/: __init__.py  bedrock_agent.py  json_utils.py  lambda_invoke.py  lambda_logging.py  lambda_response.py  mcp_servers.py  resources.py  schemas.py  test_logging.py
alphalens/backend/shared/alphalens_shared/prompts/: __init__.py  qa.py
alphalens/backend/shared/alphalens_shared/services/: __init__.py  analyst.py  analyst_narrative.py  analyst_report.py  deep_research_queue.py  discovery.py  discovery_persist.py  instrument_search.py  pipeline.py  portfolio.py  portfolio_narrative.py  portfolio_report.py  qa.py  test_analyst_report.py  test_instrument_search.py  test_portfolio_report.py  test_validator_report.py  validator.py  validator_market.py  validator_narrative.py  validator_report.py
alphalens/backend/shared/data/: curated_nvidia_ecosystem.json  demo_news.json  sample_trading_history.csv  sector_mapping.json
alphalens/backend/shared/prompts/: README.md
alphalens/backend/validator/: agent.py  lambda_handler.py  package_docker.py  pyproject.toml  templates.py  test_full.py  test_simple.py
alphalens/frontend/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
alphalens/frontend/components/: .gitkeep  AnalysisReport.tsx  AnalysisResults.tsx  AuthenticatedLayout.tsx  CandidatePoolPanel.tsx  DeepResearchPanel.tsx  DiscoveryTable.tsx  ErrorBanner.tsx  InsightCard.tsx  JobPipelineProgress.tsx  JobQAChat.tsx  Layout.tsx  MarkdownContent.tsx  PortfolioPanel.tsx  PortfolioReport.tsx  RankedOpportunitiesTable.tsx  ReportShell.tsx  TickerAutocomplete.tsx  ValidationReport.tsx  WarningsList.tsx  WithAuthToken.tsx
alphalens/frontend/mock/: discovery.ts
alphalens/frontend/pages/: _app.tsx  dashboard.tsx  discover.tsx  index.tsx  job.tsx
alphalens/frontend/styles/: globals.css
alphalens/guides/: 1_permissions.md  2_database.md  3_agents.md  4_discovery.md  5_frontend.md  README.md  agent_architecture.md  architecture.md
alphalens/scripts/: fix_qa_function_url_permissions.py  pyproject.toml  run_local.py
alphalens/terraform/: README.md
alphalens/terraform/1_database/: main.tf  outputs.tf  terraform.tfstate.backup.old  terraform.tfstate.old.683872723714  (+2 more)
guides/: 4_researcher.md
(+12 files in other folders)
