[project]
name = "alphalens-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alphalens-database",
    "alphalens-metrics",
    "alphalens-shared",
    "boto3>=1.40.29",
    "fastapi>=0.116.1",
    "fastapi-clerk-auth>=0.0.7",
    "mangum>=0.19.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
]

[tool.uv.sources]
alphalens-database = { workspace = true }
alphalens-metrics = { workspace = true }
alphalens-shared = { workspace = true }
