[project]
name = "alphalens-portfolio"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alphalens-metrics",
    "alphalens-shared",
    "openai>=1.0.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
]

[tool.uv.sources]
alphalens-metrics = { workspace = true }
alphalens-shared = { workspace = true }
