[project]
name = "alphalens-qa"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alphalens-database",
    "alphalens-shared",
    "fastapi>=0.116.1",
    "openai-agents[litellm]>=0.3.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "tenacity>=9.1.2",
    "uvicorn>=0.35.0",
]

[tool.uv.sources]
alphalens-database = { workspace = true }
alphalens-shared = { workspace = true }
