[project]
name = "alphalens-shared"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alphalens-metrics",
    "boto3>=1.40.8",
    "pydantic>=2.11.7",
]

[tool.uv.sources]
alphalens-metrics = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["alphalens_shared"]
